WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302432
[JSC] Wasm: differentiate streaming parser errors from parser errors
https://bugs.webkit.org/show_bug.cgi?id=302432
Summary
[JSC] Wasm: differentiate streaming parser errors from parser errors
Dan Hecht
Reported
2025-11-12 16:12:39 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-12 16:12:45 PST
<
rdar://problem/164594703
>
Dan Hecht
Comment 2
2025-11-12 16:14:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53844
EWS
Comment 3
2025-11-13 09:10:01 PST
Committed
302989@main
(fe06ad7d6a7f): <
https://commits.webkit.org/302989@main
> Reviewed commits have been landed. Closing PR #53844 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug