[JSC] Wasm: Do not share error propagating macros between Parser and StreamingParser https://bugs.webkit.org/show_bug.cgi?id=302432 rdar://164594703

Reviewed by Yusuke Suzuki and Marcus Plutowski.

This code isn't part of the Wasm::ParserBase hierarchy, so let's
have the streaming parser have independent macros.

Canonical link: https://commits.webkit.org/302989@main